--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -9,9 +9,9 @@ if(DOXYGEN_FOUND)
         COMMAND ${CMAKE_COMMAND} -E make_directory ${API_DOC_DIR}
         COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE}
         COMMENT "Generating API documentation using Doxygen" VERBATIM)
-else(DOXYGEN_FOUND)
+else()
     message(STATUS "Doxygen not found. Not able to build API documentation")
-endif(DOXYGEN_FOUND)
+endif()
 
 find_program(SPHINXBUILD sphinx-build)
 if(SPHINXBUILD)
@@ -22,17 +22,17 @@ if(SPHINXBUILD)
             COMMAND ${SPHINX_MAKEBAT} html
             COMMAND ${CMAKE_COMMAND} -E touch ${CMAKE_CURRENT_BINARY_DIR}/html/.nojekyll
             COMMENT "Generating HTML docs using Sphinx" VERBATIM)
-    else(WIN32)
+    else()
         set(SPHINX_MAKEFILE ${CMAKE_CURRENT_BINARY_DIR}/Makefile.sphinx)
         configure_file(Makefile.sphinx.in ${SPHINX_MAKEFILE} @ONLY)
         add_custom_target(htmldoc
             COMMAND make -f ${SPHINX_MAKEFILE} html
             COMMAND ${CMAKE_COMMAND} -E touch ${CMAKE_CURRENT_BINARY_DIR}/html/.nojekyll
             COMMENT "Generating HTML docs using Sphinx" VERBATIM)
-    endif(WIN32)
-else(SPHINXBUILD)
+    endif()
+else()
     message(STATUS "sphinx-build not found. Not able to build HTML project documentation")
-endif(SPHINXBUILD)
+endif()
 
 add_custom_target(doc)
 add_dependencies(doc apidoc htmldoc)
