--- a/cmake/ISMRMRDConfig.cmake.in
+++ b/cmake/ISMRMRDConfig.cmake.in
@@ -6,7 +6,7 @@
 # to load ISMRMRD's settings for an external project.
 @ISMRMRD_CONFIG_CODE@
 
-include(${CMAKE_CURRENT_LIST_DIR}/ISMRMRDConfigVersion.cmake)
+##- include(${CMAKE_CURRENT_LIST_DIR}/ISMRMRDConfigVersion.cmake)
 
 # The ISMRMRD version number
 set(ISMRMRD_VERSION_MAJOR "@ISMRMRD_VERSION_MAJOR@")
