COMP: Remove unnecessary target information
Future robust shared library target package import/export mechanisms
supported by cmake Version 2.8.9 and greater need to be avoided
at this point due to the default use of an ancient cmake version
on the travis nodes (2.8.7 was released in 2011, and had main shared
library import/export/hidden_visibility shortcommings).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -242,10 +242,10 @@ install(DIRECTORY matlab DESTINATION share/ismrmrd )
 ##-   COMPATIBILITY AnyNewerVersion
 ##- )
 
-export(EXPORT ISMRMRDTargets
-  FILE "${CMAKE_CURRENT_BINARY_DIR}/ISMRMRDTargets.cmake"
-  NAMESPACE ISMRMRD
-)
+##- export(EXPORT ISMRMRDTargets
+##-  FILE "${CMAKE_CURRENT_BINARY_DIR}/ISMRMRDTargets.cmake"
+##-  NAMESPACE ISMRMRD
+##-)
 
 set(CONFIG_ISMRMRD_SCHEMA_DIR   ${ISMRMRD_SCHEMA_DIR})
 set(CONFIG_ISMRMRD_TARGET_INCLUDE_DIRS ${ISMRMRD_TARGET_INCLUDE_DIRS})
