--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(test_ismrmrd
     test_quaternions.cpp
     test_xml.cpp
     test_meta.cpp
+    test_waveform.cpp
     ${ISMRMRD_DATASET_TEST_SOURCES}
     )
 
