Removed entity header from entities, removed entity inheritance from IsmrmrdHeader, added IsmrmrdText entity class and implementation. Updated test routines and added new for the IsmrmrdText

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(test_ismrmrd
     test_xml.cpp
     test_meta.cpp
     test_waveform.cpp
+    test_text.cpp
     ${ISMRMRD_DATASET_TEST_SOURCES}
     )
 
