--- a/cmake/ISMRMRDConfig.cmake.in
+++ b/cmake/ISMRMRDConfig.cmake.in
@@ -14,16 +14,16 @@ set(ISMRMRD_VERSION_MINOR "@ISMRMRD_VERSION_MINOR@")
 set(ISMRMRD_VERSION_PATCH "@ISMRMRD_VERSION_PATCH@")
 
 #   ISMRMRD_SCHEMA_DIR   - where to find ismrmrd.xsd 
-set(ISMRMRD_SCHEMA_DIR   @CONFIG_ISMRMRD_SCHEMA_DIR@)
+set(ISMRMRD_SCHEMA_DIR   "@CONFIG_ISMRMRD_SCHEMA_DIR@")
 #   ISMRMRD_INCLUDE_DIR  - where to find ismrmrd.h, etc.
-set(ISMRMRD_INCLUDE_DIRS @CONFIG_ISMRMRD_TARGET_INCLUDE_DIRS@)
+set(ISMRMRD_INCLUDE_DIRS "@CONFIG_ISMRMRD_TARGET_INCLUDE_DIRS@")
 #   ISMRMRD_LIBRARY_DIRS - where to search for libraries
-set(ISMRMRD_LIBRARY_DIRS @CONFIG_ISMRMRD_LIBRARY_DIRS@)
+set(ISMRMRD_LIBRARY_DIRS "@CONFIG_ISMRMRD_LIBRARY_DIRS@")
 #   ISMRMRD_LIBRARIES    - i.e. ismrmrd
-set(ISMRMRD_LIBRARIES    @ISMRMRD_LIBRARIES@)
+set(ISMRMRD_LIBRARIES    "@ISMRMRD_LIBRARIES@")
 
 ## For backwards compatibility use existing variable name
 ## Include directories can be lists, and should be plural
 ## to conform with naming schemes in many other cmake packages
-set(ISMRMRD_INCLUDE_DIR  @CONFIG_ISMRMRD_TARGET_INCLUDE_DIRS@)
-set(ISMRMRD_LIB_DIR @CONFIG_ISMRMRD_LIBRARY_DIRS@)
+set(ISMRMRD_INCLUDE_DIR  "@CONFIG_ISMRMRD_TARGET_INCLUDE_DIRS@")
+set(ISMRMRD_LIB_DIR "@CONFIG_ISMRMRD_LIBRARY_DIRS@")
