--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -6,8 +6,7 @@ container:
 build_task:
   build_cache:
     folder: build
-
-  build_script:
+  make_script:
     - mkdir build
     - cd build
     - cmake ..
