--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -9,6 +9,8 @@ build_task:
     - cmake ..
     - make -j
 window_task:
+  env:
+    PATH: C:\Program Files\CMake\bin
   windows_container:
     image: gradientsoftware/gadgetron-windows
   make_script:
@@ -16,7 +18,6 @@ window_task:
     - cd build
     - cmake .. -DCMAKE_TOOLCHAIN_FILE=C:\vcpkg\scripts\buildsystems\vcpkg.cmake -G "Visual Studio 15 2017 Win64"
     - cmake --build . --config Release
-    - ls
 
 
 
