--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,11 +120,10 @@ endif()
 if (HDF5_FOUND)
     set (ISMRMRD_DATASET_SUPPORT true)
     set (ISMRMRD_DATASET_SOURCES libsrc/dataset.c libsrc/dataset.cpp)
-    set (ISMRMRD_DATASET_INCLUDE_DIR ${HDF5_INCLUDE_DIR})
+    set (ISMRMRD_DATASET_INCLUDE_DIR ${HDF5_INCLUDE_DIRS})
     set (ISMRMRD_DATASET_LIBRARIES ${HDF5_C_LIBRARIES})
     add_definitions(${HDF5_DEFINITIONS})
-	include_directories(${HDF5_INCLUDE_DIR})
-    message("FNAF ${ISMRMRD_DATASET_LIBRARIES}")
+	include_directories(${HDF5_INCLUDE_DIRS})
 	message("HDF5 found at: ${HDF5_INCLUDE_DIR}")
 	message("HDF5 found at: ${HDF5_C_LIBRARIES}")
 else ()
@@ -187,7 +186,12 @@ set(ISMRMRD_TARGET_LINK_LIBS ${ISMRMRD_DATASET_LIBRARIES})
 
 # optional handling of system-installed pugixml
 if(USE_SYSTEM_PUGIXML)
-  find_package(PugiXML)
+
+	if (VCPKG_TARGET_TRIPLET) #VCPKG . 
+		find_package(PugiXML CONFIG)
+	else()
+		find_package(PugiXML)
+		endif()
   if(PugiXML_FOUND)
     message("Found system pugixml: ${PugiXML_INCLUDE_DIR} ${PugiXML_LIBRARY}")
     list(APPEND ISMRMRD_TARGET_INCLUDE_DIRS ${PugiXML_INCLUDE_DIR})
