--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,21 +188,17 @@ set(ISMRMRD_TARGET_LINK_LIBS ${ISMRMRD_DATASET_LIBRARIES})
 if(USE_SYSTEM_PUGIXML)
 
 	if (VCPKG_TARGET_TRIPLET) #VCPKG . 
-		find_package(PugiXML CONFIG)
+    find_package(PugiXML CONFIG REQUIRED)
+    list(APPEND ISMRMRD_TARGET_LINK_LIBS pugixml)
 	else()
-		find_package(PugiXML)
+		find_package(PugiXML REQUIRED)
 		endif()
-  if(PugiXML_FOUND)
     message("Found system pugixml: ${PugiXML_INCLUDE_DIR} ${PugiXML_LIBRARY}")
     list(APPEND ISMRMRD_TARGET_INCLUDE_DIRS ${PugiXML_INCLUDE_DIR})
     list(APPEND ISMRMRD_TARGET_LINK_LIBS ${PugiXML_LIBRARY})
-  else()
-    message(FATAL_ERROR "Pugixml library not found on the system, try without "
-    "setting USE_SYSTEM_PUGIXML to use the version provided in the source "
-    "tree.")
-  endif()
   list(APPEND ISMRMRD_TARGET_INCLUDE_DIRS ${PugiXML_INCLUDE_DIR})
   list(APPEND ISMRMRD_TARGET_LINK_LIBS ${PugiXML_LIBRARY})
+  endif()
 else()
   list(APPEND ISMRMRD_TARGET_SOURCES libsrc/pugixml.cpp)
 endif()
