Updated to be compatible with VCPKG (#128)
* Fixed a c_str bug. Made serialize const on Metacontainer. Added begin and end on metacontainer

* Update ismrmrd.h

* Updated CMakelists

* More vcpkg

* More vcpkg

* More vcpkg

* Added const qualifiers to Waveform begin_data

* Updated Optional to be const corret

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -187,22 +187,18 @@ set(ISMRMRD_TARGET_LINK_LIBS ${ISMRMRD_DATASET_LIBRARIES})
 # optional handling of system-installed pugixml
 if(USE_SYSTEM_PUGIXML)
 
-	if (VCPKG_TARGET_TRIPLET) #VCPKG . 
-		find_package(PugiXML CONFIG)
+	if (VCPKG_TARGET_TRIPLET) #VCPKG .
+    find_package(PugiXML CONFIG REQUIRED)
+    list(APPEND ISMRMRD_TARGET_LINK_LIBS pugixml)
 	else()
-		find_package(PugiXML)
-		endif()
-  if(PugiXML_FOUND)
+		find_package(PugiXML REQUIRED)
+
     message("Found system pugixml: ${PugiXML_INCLUDE_DIR} ${PugiXML_LIBRARY}")
     list(APPEND ISMRMRD_TARGET_INCLUDE_DIRS ${PugiXML_INCLUDE_DIR})
     list(APPEND ISMRMRD_TARGET_LINK_LIBS ${PugiXML_LIBRARY})
-  else()
-    message(FATAL_ERROR "Pugixml library not found on the system, try without "
-    "setting USE_SYSTEM_PUGIXML to use the version provided in the source "
-    "tree.")
-  endif()
   list(APPEND ISMRMRD_TARGET_INCLUDE_DIRS ${PugiXML_INCLUDE_DIR})
   list(APPEND ISMRMRD_TARGET_LINK_LIBS ${PugiXML_LIBRARY})
+  endif()
 else()
   list(APPEND ISMRMRD_TARGET_SOURCES libsrc/pugixml.cpp)
 endif()
