Adding in means to suppress inclusion of unit tests, which right now - won't build with Orchestra's 1.8 static Boost Unit Test framework library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -235,7 +235,9 @@ endif ()
 
 # TODO: make this work on Windows
 if (NOT WIN32)
-    add_subdirectory(tests)
+   if (NOT Boost_USE_STATIC_LIBS)
+      add_subdirectory(tests)
+   endif ()
 endif ()
 
 # install the matlab api
