Set policy appropriately for use of HDF5 and Boost from Orchestra, instead of system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ if (WIN32)
 elseif (build4GE)
     message (STATUS, " Setting up ISMRMRD build to use GE SDK HDF5 and Boost components for GE converter.")
     if(DEFINED ENV{SDKTOP})
+       cmake_policy (SET CMP0074 OLD)
        set(HDF5_ROOT                   "$ENV{SDKTOP}/3p")
        set(BOOST_ROOT                  "$ENV{SDKTOP}/3p")
     else ()
