--- a/cmake/ISMRMRDConfig.cmake.in
+++ b/cmake/ISMRMRDConfig.cmake.in
@@ -36,7 +36,7 @@ list(INSERT CMAKE_MODULE_PATH 0 ${ISMRMRD_CMAKE_DIR})
 
 if(USE_SYSTEM_PUGIXML)
   find_package(PugiXML CONFIG)
-  if (NOT PUGIXML_FOUND)
+  if (NOT PugiXML_FOUND)
     find_dependency(PugiXML)
   endif()
 endif()
