--- a/.github/workflows/ismrmrd_build.yml
+++ b/.github/workflows/ismrmrd_build.yml
@@ -1,6 +1,6 @@
 name: CMake
 
-on: [pull_request]
+on: [push, pull_request]
 
 env:
   BUILD_TYPE: Release
@@ -13,26 +13,22 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Create Build Environment
-      # Some projects don't allow in-source building, so create a separate build directory
-      # We'll use this as our working directory for all subsequent commands
       run: cmake -E make_directory ${{github.workspace}}/build
 
     - name: Install dependencies
       run: |
-        sudo apt-get -y install git-core libboost-all-dev libfftw3-dev libhdf5-serial-dev
+        sudo apt-get -y install git-core doxygen libboost-all-dev libfftw3-dev libhdf5-serial-dev
 
     - name: Configure CMake
-      # Use a bash shell so we can use the same syntax for environment variable
-      # access regardless of the host operating system
       shell: bash
-      working-directory: ${{github.workspace}}/build
-      # Note the current convention is to use the -S and -B options here to specify source 
-      # and build directories, but this is only available with CMake 3.13 and higher.  
-      # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
       run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
     - name: Build
       working-directory: ${{github.workspace}}/build
       shell: bash
-      # Execute the build.  You can specify a specific target with "--target <NAME>"
       run: cmake --build . --config $BUILD_TYPE
+
+    - name: Test
+      working-directory: ${{github.workspace}}/build/tests
+      shell: bash
+      run: ./test_ismrmrd
