--- a/.github/workflows/ismrmrd_build.yml
+++ b/.github/workflows/ismrmrd_build.yml
@@ -20,6 +20,7 @@ jobs:
         sudo apt-get -y install git-core doxygen libboost-all-dev libfftw3-dev libhdf5-serial-dev
 
     - name: Configure CMake
+      working-directory: ${{github.workspace}}/build
       shell: bash
       run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
