--- a/.github/workflows/ismrmrd_build.yml
+++ b/.github/workflows/ismrmrd_build.yml
@@ -17,7 +17,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt-get -y install git-core doxygen libboost-all-dev libfftw3-dev libhdf5-serial-dev
+        sudo apt-get -y install doxygen git-core graphviz libboost-all-dev libfftw3-dev libhdf5-serial-dev
 
     - name: Configure CMake
       working-directory: ${{github.workspace}}/build
