--- a/.github/workflows/ismrmrd_windows_build.yml
+++ b/.github/workflows/ismrmrd_windows_build.yml
@@ -1,6 +1,10 @@
 name: WindowsCMake
 
-on: [push, pull_request]
+on:
+  push:
+    - branches:
+      - master
+  pull_request:
 
 env:
   BUILD_TYPE: Release
@@ -17,7 +21,7 @@ jobs:
   
     - name: Install dependencies
       run: |
-        vcpkg install fftw3 boost hdf5[cpp]
+        vcpkg install fftw3 boost-test boost-program-options hdf5[cpp]
         vcpkg list
     
     - name: Configure CMake
