--- a/.github/workflows/ismrmrd_windows_build.yml
+++ b/.github/workflows/ismrmrd_windows_build.yml
@@ -2,9 +2,12 @@ name: WindowsCMake
 
 on:
   push:
-    - branches:
+    branches:
       - master
+  
   pull_request:
+    branches:
+      - master
 
 env:
   BUILD_TYPE: Release
