Updated HDF5 dependencies

--- a/.github/workflows/ismrmrd_windows_build.yml
+++ b/.github/workflows/ismrmrd_windows_build.yml
@@ -27,7 +27,7 @@ jobs:
   
     - name: Install dependencies
       run: |
-        vcpkg install fftw3 boost-test boost-program-options hdf5[cpp]
+        vcpkg install fftw3 boost-test boost-program-options hdf5 hdf5[cpp]
         vcpkg list
     
     - name: Configure CMake
