--- a/.github/workflows/ismrmrd_build.yml
+++ b/.github/workflows/ismrmrd_build.yml
@@ -1,6 +1,13 @@
 name: CMake
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  
+  pull_request:
+    branches:
+      - master
 
 env:
   BUILD_TYPE: Release
