Added Release path to test binary

--- a/.github/workflows/ismrmrd_windows_build.yml
+++ b/.github/workflows/ismrmrd_windows_build.yml
@@ -49,7 +49,9 @@ jobs:
     - name: Test
       working-directory: ${{github.workspace}}/build/tests
       shell: pwsh
-      run: .\test_ismrmrd.exe
+      run: |
+        cd $env:BUILD_TYPE
+        .\test_ismrmrd.exe
 
 
 
