--- a/.github/workflows/ismrmrd_windows_build.yml
+++ b/.github/workflows/ismrmrd_windows_build.yml
@@ -49,9 +49,7 @@ jobs:
     - name: Test
       working-directory: ${{github.workspace}}/build/tests
       shell: pwsh
-      run: |
-        cd $env:BUILD_TYPE
-        .\test_ismrmrd.exe
+      run: .\{{ env.BUILD_TYPE }}\test_ismrmrd.exe
 
 
 
